--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,6 +4,21 @@ body {
   box-sizing: border-box;
 }
 
+.p-card {
+  border: 2px solid #334155;
+}
+
+.cart-container {
+  display: grid;
+  padding-left: 30px;
+  padding-right: 30px;
+  grid-template-columns: calc(100% - 392px) auto;
+  gap: 32px;
+  margin: 32px auto 44px;
+  max-width: 100vw;
+  min-height: unset;
+}
+
 .products-container {
   display: grid;
   max-width: 100vw;
