--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12,6 +12,7 @@ body {
   display: grid;
   padding-left: 30px;
   padding-right: 30px;
+  padding-top: 30px;
   grid-template-columns: calc(100% - 392px) auto;
   gap: 32px;
   margin: 32px auto 44px;
@@ -24,10 +25,16 @@ body {
   max-width: 100vw;
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 30px;
+  padding-top: 60px;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: minmax(min-content, max-content);
   gap: 20px;
+}
+
+.button_new_product {
+  position: absolute;
+  top: 10px;
+  left: 30px;
 }
 
 .product-card {
@@ -55,4 +62,13 @@ body {
     padding-right: 0;
     grid-template-columns: 1fr;
   }
+
+  .button_new_product {
+    top: 10px;
+    left: 0%;
+  }
+}
+
+input {
+  width: 100%;
 }
